# strongtypes

./: CMakeLists.txt
include/: strong_types.h
test/: numeric_operations_test.cpp  strong_types_test.cpp
